// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Clipboard > should not render without children in variant type 'button' 1`] = `<DocumentFragment />`;

exports[`Clipboard > should not render without children in variant type 'icon' 1`] = `<DocumentFragment />`;

exports[`Clipboard > should render with children in variant type 'button' 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <button
      class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
      data-testid="clipboard-button__wrapper"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <span>
          Hello!
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Clipboard > should render with children in variant type 'icon' 1`] = `
<DocumentFragment>
  <button
    class="relative cursor-pointer ring-focus focus:outline-hidden"
    data-ring-focus-margin="-m-1"
    data-testid="clipboard-icon__wrapper"
    type="button"
  >
    <span>
      Hello!
    </span>
  </button>
</DocumentFragment>
`;
